--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.7.0"
+    "node-sass": "^3.11.2",
+    "react-scripts": "0.7.0",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.1.1",
+    "sass-loader": "^4.0.2"
   },
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.16.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
@@ -13,7 +19,8 @@
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
-    "redux-saga": "^0.12.1"
+    "redux-saga": "^0.12.1",
+    "whatwg-fetch": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
